--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,8 @@
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
-    
+    <script async defer src="//assets.pinterest.com/js/pinit.js"></script>
     <!-- built files will be auto injected -->
   </body>
+
 </html>
