changes dynamic component

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap" rel="stylesheet">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>Léa Buendé - Code & more  ❤️ </title>
   </head>
   <body>
     <noscript>
